# FoxEngine

./: .gitignore  README.md
Data/: lightShader.frag  lightShader.vert  modelShader.frag  postFX.frag  postFX.vert  simpleColorShader.frag  simpleMaterialShader.frag  simpleMaterialShader.vert  simpleMeshShader.frag  simpleMeshShader.vert
Data/Models/Sun/: sun.mtl
Projects/Common/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  CubeMap.cpp  CubeMap.h  Framebuffer.cpp  Framebuffer.h  IMesh.h  ISceneObject.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderbuffer.cpp  Renderbuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Square.cpp  Square.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  utils.h
Projects/Common/Geometry/: Cone.java  Cube.java  Cuboid.java  Cylinder.java  Face.h  Face.java  Mesh.h  Mesh.java  Plane.h  Plane.java  Pyramid.java  Sphere.java
Projects/Common/Utils/: AABox.cpp  AABox.h  Color3f.cpp  Color3f.h  Color4f.cpp  Color4f.h  FrustumG.cpp  FrustumG.h  FrustumR.cpp  FrustumR.h  Matrix3f.cpp  Matrix3f.h  Matrix4f.cpp  Matrix4f.h  Plane.cpp  Plane.h  Quat4f.cpp  Quat4f.h  Types.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h  compilerpre.h
Projects/FoxEngine/: CMakeLists.txt
Projects/FoxEngine/src/: main.cpp
Tools/cmake/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
Tools/cmake/doc/cmake/html/_static/: documentation_options.js
Tools/cmake/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  else.html  elseif.html  (+85 more)
Tools/cmake/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  nsis.html  rpm.html  (+4 more)
Tools/cmake/man/man1/: cmake-gui.1  cmake.1  cpack.1  ctest.1
Tools/cmake/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
(+1636 files in other folders)
